@@ -9,18 +9,17 @@
 package org.elasticsearch.common.xcontent;
 
 import org.elasticsearch.Version;
-import org.elasticsearch.common.ParseField;
 import org.elasticsearch.common.bytes.BytesReference;
-import org.elasticsearch.common.RestApiVersion;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.rest.FakeRestRequest;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 
 import static org.hamcrest.core.IsEqual.equalTo;
 
@@ -32,18 +31,18 @@ public class CompatibleNamedXContentRegistryTests extends ESTestCase {
     static class ParentObject {
         private static final ConstructingObjectParser<ParentObject, String> PARSER =
             new ConstructingObjectParser<>("parentParser", false,
-                (a, name) -> new ParentObject(name, (SubObject) a[0]));
+                (a, name) -> new ParentObject(name, (NewSubObject) a[0]));
 
         String name;
-        SubObject subObject;
+        NewSubObject subObject;
 
         static {
             PARSER.declareNamedObject(ConstructingObjectParser.constructorArg(),
-                (p, c, n) -> p.namedObject(SubObject.class, n, null),
+                (p, c, n) -> p.namedObject(NewSubObject.class, n, null),
                 new ParseField("subObject"));
         }
 
-        ParentObject(String name, SubObject subObject) {
+        ParentObject(String name, NewSubObject subObject) {
             this.name = name;
             this.subObject = subObject;
         }
@@ -54,10 +53,13 @@ public class CompatibleNamedXContentRegistryTests extends ESTestCase {
         }
     }
 
-    static class SubObject {
-        private static final ConstructingObjectParser<SubObject, String> PARSER = new ConstructingObjectParser<>(
+    static class NewSubObject {
+        public static final Function<RestApiVersion, Boolean> REST_API_VERSION = RestApiVersion.onOrAfter(RestApiVersion.current());
+        private static final ConstructingObjectParser<NewSubObject, String> PARSER = new ConstructingObjectParser<>(
             "parser1", false,
-            a -> new SubObject((String) a[0]));
+            a -> new NewSubObject((String) a[0]));
+        static final ParseField NAME = new ParseField("namedObjectName1")
+            .forRestApiVersion(RestApiVersion.onOrAfter(RestApiVersion.current()));
 
         static {
             PARSER.declareString(ConstructingObjectParser.constructorArg(), new ParseField("new_field"));
@@ -65,37 +67,43 @@ public class CompatibleNamedXContentRegistryTests extends ESTestCase {
 
         String field;
 
-        SubObject(String field) {
+        NewSubObject(String field) {
             this.field = field;
         }
 
-        public static SubObject parse(XContentParser parser) {
+        public static NewSubObject parse(XContentParser parser) {
             return PARSER.apply(parser, null);
         }
     }
 
-    static class OldSubObject extends SubObject {
-        private static final ConstructingObjectParser<SubObject, String> PARSER = new ConstructingObjectParser<>(
-            "parser2", false,
-            a -> new SubObject((String) a[0]));
+    static class OldSubObject {
+        public static final Function<RestApiVersion, Boolean> REST_API_VERSION = RestApiVersion.equalTo(RestApiVersion.minimumSupported());
 
+        private static final ConstructingObjectParser<NewSubObject, String> PARSER = new ConstructingObjectParser<>(
+            "parser2", false,
+            a -> new NewSubObject((String) a[0]));
+        static final ParseField NAME = new ParseField("namedObjectName1")
+            .forRestApiVersion(RestApiVersion.equalTo(RestApiVersion.minimumSupported()));
         static {
             PARSER.declareString(ConstructingObjectParser.constructorArg(), new ParseField("old_field"));
         }
+        String field;
 
         OldSubObject(String field) {
-            super(field);
+            this.field = field;
         }
 
-        public static SubObject parse(XContentParser parser) {
+        public static NewSubObject parse(XContentParser parser) {
             return PARSER.apply(parser, null);
         }
     }
 
     public void testNotCompatibleRequest() throws IOException {
         NamedXContentRegistry registry = new NamedXContentRegistry(
-            Arrays.asList(new NamedXContentRegistry.Entry(SubObject.class, new ParseField("namedObjectName1"), SubObject::parse)),
-            Arrays.asList(new NamedXContentRegistry.Entry(SubObject.class, new ParseField("namedObjectName1"), OldSubObject::parse)));
+            List.of(new NamedXContentRegistry.Entry(NewSubObject.class, NewSubObject.NAME, NewSubObject::parse,
+                    NewSubObject.REST_API_VERSION),
+                new NamedXContentRegistry.Entry(NewSubObject.class, OldSubObject.NAME, OldSubObject::parse,
+                    OldSubObject.REST_API_VERSION)));
 
         XContentBuilder b = XContentBuilder.builder(XContentType.JSON.xContent());
         b.startObject();
@@ -121,13 +129,14 @@ public class CompatibleNamedXContentRegistryTests extends ESTestCase {
             ParentObject parse = ParentObject.parse(p);
             assertThat(parse.subObject.field, equalTo("value1"));
         }
-
     }
 
     public void testCompatibleRequest() throws IOException {
-        NamedXContentRegistry compatibleRegistry = new NamedXContentRegistry(
-            Arrays.asList(new NamedXContentRegistry.Entry(SubObject.class, new ParseField("namedObjectName1"), SubObject::parse)),
-            Arrays.asList(new NamedXContentRegistry.Entry(SubObject.class, new ParseField("namedObjectName1"), OldSubObject::parse)));
+        NamedXContentRegistry registry = new NamedXContentRegistry(
+            List.of(new NamedXContentRegistry.Entry(NewSubObject.class, NewSubObject.NAME, NewSubObject::parse,
+                    NewSubObject.REST_API_VERSION),
+                new NamedXContentRegistry.Entry(NewSubObject.class, OldSubObject.NAME, OldSubObject::parse,
+                    OldSubObject.REST_API_VERSION)));
 
         XContentBuilder b = XContentBuilder.builder(XContentType.JSON.xContent());
         b.startObject();
@@ -142,7 +151,7 @@ public class CompatibleNamedXContentRegistryTests extends ESTestCase {
                 String.valueOf(RestApiVersion.minimumSupported().major)));
         List<String> mediaTypeList = Collections.singletonList(mediaType);
 
-        RestRequest restRequest2 = new FakeRestRequest.Builder(compatibleRegistry)
+        RestRequest restRequest2 = new FakeRestRequest.Builder(registry)
             .withContent(BytesReference.bytes(b), RestRequest.parseContentType(mediaTypeList))
             .withPath("/foo")
             .withHeaders(Map.of("Content-Type", mediaTypeList, "Accept", mediaTypeList))
